--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 dist
 
 node_modules/
+storybook-dist/
 
 # Created by https://www.gitignore.io/api/node,linux,macos,windows
 # Edit at https://www.gitignore.io/?templates=node,linux,macos,windows
