--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest-styled-components": "^6.3.3",
     "prettier": "^1.18.2",
     "react-dom": "^16.9.0",
+    "react-intl": "^3.3.1",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
   },
