--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@insta-ui/icon",
+  "name": "@insta-ui/utils",
   "version": "0.1.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -22,16 +22,17 @@
     "dist"
   ],
   "devDependencies": {
-    "@storybook/react": "^5.1.11",
-    "@types/jest": "^24.0.18",
-    "@types/react": "^16.9.2",
-    "@types/storybook__addon-knobs": "^5.0.3",
-    "@types/storybook__react": "^4.0.2",
     "jest": "^24.9.0",
+    "react-intl": "^3.3.1",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
     "@types/styled-components": "^4.1.19",
+    "react": "^16.9.0",
+    "styled-components": "^4.3.2"
+  },
+  "dependencies": {
+    "@insta-ui/theme": "^0.1.0",
     "react": "^16.9.0",
     "styled-components": "^4.3.2"
   }
