--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,24 @@
 {
-  "extends": "./configs/tsconfig.json",
-
   "compilerOptions": {
+    "jsx": "react",
+    "moduleResolution": "node",
+    "strict": true,
+    "esModuleInterop": true,
+    "declaration": true,
+    "target": "es5",
+    "module": "esnext",
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "baseUrl": ".",
+    "lib": [
+      "dom",
+      "es2015"
+    ],
     "paths": {
-      "@insta-ui/*": ["../packages/*/src"]
+      "@insta-ui/*": ["packages/*"]
     }
-  }
+  },
+  "include": ["./packages/**/*", "./types"],
+  "exclude": ["node_modules"]
 }
