--- a/packages/errorMessage/package.json
+++ b/packages/errorMessage/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@insta-ui/error-message",
+  "name": "@instamotion/error-message",
   "version": "0.1.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -12,6 +12,8 @@
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "npm run build"
   },
+  "repository": "git@github.com:Instamotion/im-components.git",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "maintainers": [
     "Ivan D",
     "Oleg P",
