--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -38,6 +38,6 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@insta-ui/utils": "^0.2.0"
+    "@instamotion/utils": "^0.2.0"
   }
 }
