--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -34,9 +34,9 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@insta-ui/error-message": "^0.1.0",
-    "@insta-ui/label": "^0.1.0",
-    "@insta-ui/theme": "^0.1.0",
-    "@insta-ui/utils": "^0.2.0"
+    "@instamotion/error-message": "^0.1.0",
+    "@instamotion/label": "^0.1.0",
+    "@instamotion/theme": "^0.1.0",
+    "@instamotion/utils": "^0.2.0"
   }
 }
