--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "erlking",
+  "name": "@instamotion/im-components",
   "version": "1.0.0",
-  "description": "",
+  "description": "The components library for the instamotion website",
   "main": "index.js",
   "scripts": {
-    "test": "NODE_ENV=test jest --config=./configs/jest.config.js",
+    "test": "NODE_ENV=test jest --config=jest.config.js",
+    "test:watch": "NODE_ENV=test jest --watch --config=jest.config.js",
     "generate:component": "hygen component new",
     "clean": "rm -r storybook-dist && bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
     "prettier:base": "prettier --parser typescript",
@@ -17,15 +18,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Instamotion/erlking.git"
+    "url": "git+https://github.com/Instamotion/im-components.git"
   },
   "keywords": [],
   "author": "InstaMotion Retail GmbH",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Instamotion/erlking/issues"
+    "url": "https://github.com/Instamotion/im-components/issues"
   },
-  "homepage": "https://github.com/Instamotion/erlking#readme",
+  "homepage": "https://github.com/Instamotion/im-components#readme",
   "dependencies": {
     "react": "^16.9.0",
     "react-alice-carousel": "^1.15.3",
