F [CA-292] fix registry setup

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 scripts-prepend-node-path=true
-registry=https://npm.pkg.github.com/instamotion
+@instamotion:registry=https://npm.pkg.github.com/instamotion
