--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "react": "^16.9.0",
     "react-alice-carousel": "^1.15.3",
+    "react-gtm-module": "^2.0.8",
     "react-swipeable": "^5.4.0",
     "styled-components": "^4.3.2"
   },
@@ -44,6 +45,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
+    "@types/react-gtm-module": "^2.0.0",
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.19",
@@ -67,5 +69,6 @@
     "workspaces": [
       "packages/*"
     ]
-  }
+  },
+  "peerDependencies": {}
 }
