--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "generate:component": "hygen component new",
     "clean": "rm -r storybook-dist && bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
     "prettier:base": "prettier --parser typescript",
-    "prettier:check": "npm run prettier:base -- --list-different \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
+    "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
+    "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
     "build:storybook": "build-storybook -c .storybook -o ./storybook-dist",
     "build:components": "bolt workspaces run build",
     "build": "bolt build:components && bolt build:storybook",
