--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@instamotion/branding-logo",
   "version": "0.1.0",
-  "main": "dist/cjs/index.js",
+  "main": "dist/cjs/main.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
   "author": "InstaMotion Retail GmbH",
@@ -13,7 +13,9 @@
     "prepublishOnly": "npm run build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "maintainers": [
     "Ivan D",
     "Oleg P",
@@ -25,6 +27,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@instamotion/utils": "^0.3.0",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
