--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -42,6 +42,7 @@
     "@instamotion/carousel": "^0.1.0",
     "@instamotion/icon": "^0.1.0",
     "@instamotion/theme": "^0.1.0",
-    "@instamotion/utils": "^0.2.0"
+    "@instamotion/typography": "^0.2.0",
+    "@instamotion/utils": "^0.3.0"
   }
 }
