--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -27,7 +27,8 @@
     "dist"
   ],
   "devDependencies": {
-    "@instamotion/utils": "^0.3.0",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
