--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -28,6 +28,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "typescript": "^3.6.3"
   },
   "dependencies": {
