--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -28,16 +28,18 @@
   ],
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "enzyme": "^3.10.0",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
     "react": "^16.9.0",
-    "react-swipeable": "^5.4.0",
     "styled-components": "^4.3.2"
   },
   "dependencies": {
+    "react-swipeable": "^5.4.0",
     "@instamotion/theme": "^0.1.0",
     "@instamotion/utils": "^0.3.0"
   }
