--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -25,6 +25,8 @@
   ],
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
