--- a/packages/dropdown/package.json
+++ b/packages/dropdown/package.json
@@ -25,7 +25,8 @@
     "dist"
   ],
   "devDependencies": {
-    "@instamotion/checkbox": "^0.1.0",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
