--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@types/react-gtm-module": "^2.0.0",
     "@types/styled-components": "^4.1.19",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
