--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -27,9 +27,10 @@
     "dist"
   ],
   "devDependencies": {
-    "@instamotion/checkbox": "^0.1.0",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
