--- a/packages/loadingSpinner/package.json
+++ b/packages/loadingSpinner/package.json
@@ -26,7 +26,8 @@
     "dist"
   ],
   "devDependencies": {
-    "@storybook/react": "^5.1.11",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
