--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -28,6 +28,8 @@
   ],
   "devDependencies": {
     "@types/styled-components": "^4.1.19",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "enzyme": "^3.10.0",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
