--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -26,10 +26,9 @@
     "dist"
   ],
   "devDependencies": {
-    "@types/node": "^12.7.4",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
-    "@types/webpack": "^4.39.3",
-    "awesome-typescript-loader": "^5.2.1",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
