--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "bolt build",
     "test": "jest"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
@@ -34,7 +34,7 @@
   },
   "dependencies": {
     "@instamotion/icon": "^0.1.0",
-    "@instamotion/theme": "^0.2.0"
+    "@instamotion/theme": "^0.3.0"
   },
   "peerDependencies": {
     "react": "^16.9.0",
