--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
   "publishConfig": {
@@ -40,7 +40,7 @@
   },
   "dependencies": {
     "react-swipeable": "^5.4.0",
-    "@instamotion/theme": "^0.2.0",
+    "@instamotion/theme": "^0.3.0",
     "@instamotion/utils": "^0.3.0"
   }
 }
