--- a/packages/loadingSpinner/package.json
+++ b/packages/loadingSpinner/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
   "publishConfig": {
@@ -37,6 +37,6 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/theme": "^0.2.0"
+    "@instamotion/theme": "^0.3.0"
   }
 }
