--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -10,10 +10,12 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "maintainers": [
     "Ivan D",
     "Oleg P",
@@ -34,7 +36,5 @@
     "react": "^16.9.0",
     "styled-components": "^4.3.2"
   },
-  "dependencies": {
-    "@instamotion/utils": "^0.3.0"
-  }
+  "dependencies": {}
 }
