--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
   "publishConfig": {
@@ -43,7 +43,7 @@
   "dependencies": {
     "@instamotion/carousel": "^0.1.0",
     "@instamotion/icon": "^0.1.0",
-    "@instamotion/theme": "^0.2.0",
+    "@instamotion/theme": "^0.3.0",
     "@instamotion/typography": "^0.2.0",
     "@instamotion/utils": "^0.3.0"
   }
