--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -10,7 +10,7 @@
     "clean": "rm -rf ./dist",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
   "publishConfig": {
@@ -39,6 +39,6 @@
   },
   "dependencies": {
     "@instamotion/branding-logo": "^0.1.0",
-    "@instamotion/theme": "^0.2.0"
+    "@instamotion/theme": "^0.3.0"
   }
 }
