--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@types/enzyme": "^3.10.3",
