--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@instamotion/icon",
+  "name": "@im-ui/icon",
   "version": "0.1.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
   "author": "InstaMotion Retail GmbH",
+
   "scripts": {
     "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
     "clean": "rm -rf ./dist",
