--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -39,7 +39,7 @@
   },
   "dependencies": {
     "react-swipeable": "^5.4.0",
-    "@instamotion/theme": "^0.3.0",
-    "@instamotion/utils": "^0.3.0"
+    "@im-ui/theme": "^0.3.0",
+    "@im-ui/utils": "^0.3.0"
   }
 }
