--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -37,7 +37,7 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/branding-logo": "^0.1.0",
-    "@instamotion/theme": "^0.3.0"
+    "@im-ui/branding-logo": "^0.1.0",
+    "@im-ui/theme": "^0.3.0"
   }
 }
