--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -29,7 +29,7 @@
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "jest": "^24.9.0",
-    "@instamotion/checkbox": "^0.1.0",
+    "@im-ui/checkbox": "^0.1.0",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
@@ -38,9 +38,9 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/error-message": "^0.1.0",
-    "@instamotion/label": "^0.1.0",
-    "@instamotion/theme": "^0.3.0",
-    "@instamotion/utils": "^0.3.0"
+    "@im-ui/error-message": "^0.1.0",
+    "@im-ui/label": "^0.1.0",
+    "@im-ui/theme": "^0.3.0",
+    "@im-ui/utils": "^0.3.0"
   }
 }
