--- a/packages/loadingSpinner/package.json
+++ b/packages/loadingSpinner/package.json
@@ -36,6 +36,6 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/theme": "^0.3.0"
+    "@im-ui/theme": "^0.3.0"
   }
 }
