--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -36,8 +36,8 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/icon": "^0.1.0",
-    "@instamotion/theme": "^0.3.0",
-    "@instamotion/utils": "^0.3.0"
+    "@im-ui/icon": "^0.1.0",
+    "@im-ui/theme": "^0.3.0",
+    "@im-ui/utils": "^0.3.0"
   }
 }
