--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -38,7 +38,7 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@instamotion/theme": "^0.3.0",
-    "@instamotion/utils": "^0.3.0"
+    "@im-ui/theme": "^0.3.0",
+    "@im-ui/utils": "^0.3.0"
   }
 }
