--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
+    "@svgr/rollup": "^4.3.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-to-json": "^1.5.3",
     "@types/jest": "^24.0.18",
@@ -74,6 +75,10 @@
     "react-dom": "^16.9.0",
     "react-intl": "^3.3.1",
     "react-svg-loader": "^3.0.3",
+    "rollup": "^1.24.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.24.3",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.1",
