--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -8,8 +8,10 @@
   "scripts": {
     "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
     "clean": "rm -rf ./dist",
-    "compile:esm": "tsc -p build/tsconfig.esm.json",
-    "compile:cjs": "tsc -p build/tsconfig.cjs.json",
+    "__compile:esm": "tsc -p build/tsconfig.esm.json",
+    "compile:esm": "rollup -c build/rollup.config.esm.js",
+    "__compile:cjs": "tsc -p build/tsconfig.cjs.json",
+    "compile:cjs": "rollup -c build/rollup.config.cjs.js",
     "prepublishOnly": "bolt build"
   },
   "repository": "git@github.com:Instamotion/im-components.git",
@@ -24,10 +26,15 @@
     "dist"
   ],
   "devDependencies": {
+    "@svgr/rollup": "^4.3.3",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
+    "rollup": "^1.24.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-typescript2": "^0.24.3",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
