fixing tests to follow the symlinks

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-loader": "^8.0.6",
     "bolt": "^0.23.6",
     "bolt-query": "^1.1.4",
+    "enhanced-resolve": "^4.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
@@ -70,11 +71,13 @@
     "jest": "^24.9.0",
     "jest-junit": "^8.0.0",
     "jest-styled-components": "^6.3.3",
+    "jest-svg-transformer": "^1.0.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react-dom": "^16.9.0",
     "react-intl": "^3.3.1",
     "react-svg-loader": "^3.0.3",
+    "resolve-from": "^5.0.0",
     "rollup": "^1.24.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-terser": "^5.1.2",
