--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -23,11 +23,12 @@
     "dist"
   ],
   "devDependencies": {
+    "@im-ui/utils": "^0.3.1",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
+    "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
-    "typescript": "^3.6.3",
-    "@types/styled-components": "^4.1.19"
+    "typescript": "^3.6.3"
   },
   "peerDependencies": {
     "react": "^16.9.0",
