--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/styled-components": "^4.1.19",
     "@types/webpack": "^4.39.3",
     "awesome-typescript-loader": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "bolt": "^0.23.6",
     "bolt-query": "^1.1.4",
     "enhanced-resolve": "^4.1.1",
@@ -83,7 +84,8 @@
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.3",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "webpack": "^4.41.2"
   },
   "husky": {
     "hooks": {
