--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
   },
   "homepage": "https://github.com/Instamotion/im-components#readme",
   "dependencies": {
-    "@svgr/webpack": "^4.3.3",
     "react": "^16.9.0",
     "react-alice-carousel": "^1.15.3",
     "react-gtm-module": "^2.0.8",
@@ -38,18 +37,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
-    "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-typescript": "^7.6.0",
     "@storybook/addon-a11y": "^5.1.11",
     "@storybook/addon-actions": "^5.2.3",
     "@storybook/addon-knobs": "^5.1.11",
     "@storybook/addon-storysource": "^5.2.4",
     "@storybook/addons": "^5.1.11",
     "@storybook/react": "^5.1.11",
-    "@svgr/rollup": "^4.3.3",
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-to-json": "^1.5.3",
+    "@types/faker": "^4.1.6",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
@@ -66,6 +62,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
+    "faker": "^4.1.0",
     "husky": "^3.0.9",
     "hygen": "^4.0.9",
     "inquirer": "^7.0.0",
@@ -73,16 +70,13 @@
     "jest-junit": "^8.0.0",
     "jest-styled-components": "^6.3.3",
     "jest-svg-transformer": "^1.0.0",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "prop-types": "^15.7.2",
     "react-dom": "^16.9.0",
     "react-intl": "^3.3.1",
     "react-svg-loader": "^3.0.3",
     "resolve-from": "^5.0.0",
-    "rollup": "^1.24.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-terser": "^5.1.2",
-    "rollup-plugin-typescript2": "^0.24.3",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3",
     "webpack": "^4.41.2"
