--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-gtm-module": "^2.0.0",
+    "@types/react-intl": "^3.0.0",
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.19",
