--- a/packages/icon/package.json
+++ b/packages/icon/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/icon",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -35,5 +35,8 @@
   "peerDependencies": {
     "react": "^16.9.0",
     "styled-components": "^4.3.2"
+  },
+  "dependencies": {
+    "@im-ui/theme": "^0.3.1"
   }
 }
