--- a/packages/accordion/package.json
+++ b/packages/accordion/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/accordion",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -23,7 +23,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@im-ui/utils": "^0.4.0",
+    "@im-ui/utils": "0.4.1",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/styled-components": "^4.1.19",
