--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/branding-logo",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/main.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -35,6 +35,6 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.1"
+    "@im-ui/theme": "0.3.1"
   }
 }
