--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/button",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -30,8 +30,8 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
-    "@im-ui/icon": "^0.2.0",
-    "@im-ui/theme": "^0.3.1"
+    "@im-ui/icon": "0.2.1",
+    "@im-ui/theme": "0.3.1"
   },
   "peerDependencies": {
     "react": "^16.9.0",
