--- a/packages/carTile/package.json
+++ b/packages/carTile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/car-tile",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -29,7 +29,7 @@
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "jest": "^24.9.0",
-    "@im-ui/checkbox": "^0.1.1",
+    "@im-ui/checkbox": "0.1.2",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
@@ -38,10 +38,10 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@im-ui/error-message": "^0.1.1",
-    "@im-ui/icon": "^0.2.0",
-    "@im-ui/label": "^0.1.1",
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/error-message": "0.1.2",
+    "@im-ui/icon": "0.2.1",
+    "@im-ui/label": "0.1.2",
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/utils": "0.4.1"
   }
 }
