--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/carousel",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "react-swipeable": "^5.4.0",
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/utils": "0.4.1"
   }
 }
