--- a/packages/dropdown/package.json
+++ b/packages/dropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/dropdown",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -36,9 +36,9 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@im-ui/error-message": "^0.1.1",
-    "@im-ui/label": "^0.1.1",
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/error-message": "0.1.2",
+    "@im-ui/label": "0.1.2",
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/utils": "0.4.1"
   }
 }
