--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/footer",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -39,10 +39,10 @@
   },
   "dependencies": {
     "react-intl": "^3.3.1",
-    "@im-ui/carousel": "^0.1.1",
-    "@im-ui/icon": "^0.2.0",
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/typography": "^0.2.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/carousel": "0.1.2",
+    "@im-ui/icon": "0.2.1",
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/typography": "0.2.2",
+    "@im-ui/utils": "0.4.1"
   }
 }
