--- a/packages/tooltip/package.json
+++ b/packages/tooltip/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/tooltip",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -34,8 +34,8 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@im-ui/icon": "^0.2.0",
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/icon": "0.2.1",
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/utils": "0.4.1"
   }
 }
