--- a/packages/typography/package.json
+++ b/packages/typography/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/typography",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -36,7 +36,7 @@
     "styled-components": "^4.3.2"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.1",
-    "@im-ui/utils": "^0.4.0"
+    "@im-ui/theme": "0.3.1",
+    "@im-ui/utils": "0.4.1"
   }
 }
