--- a/packages/rangeDropdown/package.json
+++ b/packages/rangeDropdown/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@im-ui/dropdown",
-  "version": "0.2.0",
+  "name": "@im-ui/range-dropdown",
+  "version": "0.1.0",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -16,27 +16,27 @@
   "maintainers": [
     "Ivan D",
     "Oleg P",
-    "Dmytro B",
-    "Alex S"
+    "Dmytro B"
   ],
   "license": "MIT",
   "files": [
     "dist"
   ],
   "devDependencies": {
+    "@types/styled-components": "^4.1.19",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
-    "@types/styled-components": "^4.1.19",
     "jest": "^24.9.0",
     "typescript": "^3.6.3"
   },
   "peerDependencies": {
     "react": "^16.9.0",
-    "react-intl": "^3.3.1",
     "styled-components": "^4.3.2"
   },
   "dependencies": {
+    "@im-ui/dropdown": "0.2.0",
     "@im-ui/error-message": "0.1.2",
+    "@im-ui/input": "0.2.0",
     "@im-ui/label": "0.1.2",
     "@im-ui/theme": "0.3.1",
     "@im-ui/utils": "0.4.1"
