--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/enzyme-to-json": "^1.5.3",
     "@types/faker": "^4.1.6",
     "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.136",
     "@types/node": "^12.7.4",
     "@types/react": "^16.9.2",
     "@types/react-gtm-module": "^2.0.0",
