--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/button",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -30,8 +30,8 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "@im-ui/icon": "0.2.4",
-    "@im-ui/theme": "0.3.3"
+    "@im-ui/icon": "^0.2.5",
+    "@im-ui/theme": "^0.3.4"
   },
   "peerDependencies": {
     "react": "^16.11.0",
