--- a/packages/carTile/package.json
+++ b/packages/carTile/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/car-tile",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -25,7 +25,7 @@
     "dist"
   ],
   "devDependencies": {
-    "@im-ui/checkbox": "0.1.2",
+    "@im-ui/checkbox": "^0.1.3",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
@@ -38,10 +38,10 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/error-message": "0.1.2",
-    "@im-ui/icon": "0.2.4",
-    "@im-ui/label": "0.1.2",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/utils": "0.4.1"
+    "@im-ui/error-message": "^0.1.3",
+    "@im-ui/icon": "^0.2.5",
+    "@im-ui/label": "^0.1.3",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/utils": "^0.4.2"
   }
 }
