--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/checkbox",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -35,9 +35,9 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/error-message": "0.1.2",
-    "@im-ui/label": "0.1.2",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/utils": "0.4.1"
+    "@im-ui/error-message": "^0.1.3",
+    "@im-ui/label": "^0.1.3",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/utils": "^0.4.2"
   }
 }
