--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/footer",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -35,14 +35,14 @@
   "peerDependencies": {
     "react": "^16.11.0",
     "react-gtm-module": "^2.0.8",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "react-intl": "^3.4.0"
   },
   "dependencies": {
-    "@im-ui/carousel": "0.1.2",
-    "@im-ui/icon": "0.2.4",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/typography": "0.2.2",
-    "@im-ui/utils": "0.4.1",
-    "react-intl": "^3.4.0"
+    "@im-ui/carousel": "^0.1.3",
+    "@im-ui/icon": "^0.2.5",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/typography": "^0.2.3",
+    "@im-ui/utils": "^0.4.2"
   }
 }
