--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/header",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -32,13 +32,13 @@
   },
   "peerDependencies": {
     "react": "^16.11.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "react-intl": "^3.4.0"
   },
   "dependencies": {
-    "@im-ui/branding-logo": "0.1.2",
-    "@im-ui/icon": "0.2.4",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/utils": "0.4.1",
-    "react-intl": "^3.4.0"
+    "@im-ui/branding-logo": "^0.1.3",
+    "@im-ui/icon": "^0.2.5",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/utils": "^0.4.2"
   }
 }
