--- a/packages/radioButtonGroup/package.json
+++ b/packages/radioButtonGroup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/radio-button-group",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -34,8 +34,8 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/radio-button": "^0.1.0",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/utils": "0.4.1"
+    "@im-ui/radio-button": "^0.1.1",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/utils": "^0.4.2"
   }
 }
