--- a/packages/rangeDropdown/package.json
+++ b/packages/rangeDropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/range-dropdown",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -34,11 +34,11 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/dropdown": "0.2.0",
-    "@im-ui/error-message": "0.1.2",
-    "@im-ui/input": "0.2.0",
-    "@im-ui/label": "0.1.2",
-    "@im-ui/theme": "0.3.3",
-    "@im-ui/utils": "0.4.1"
+    "@im-ui/dropdown": "^0.2.1",
+    "@im-ui/error-message": "^0.1.3",
+    "@im-ui/input": "^0.2.1",
+    "@im-ui/label": "^0.1.3",
+    "@im-ui/theme": "^0.3.4",
+    "@im-ui/utils": "^0.4.2"
   }
 }
