--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -37,6 +37,7 @@
     "react-gtm-module": "^2.0.0"
   },
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "1.0.40",
     "@im-ui/branding-logo": "^0.1.3",
     "@im-ui/icon": "^0.2.5",
     "@im-ui/theme": "^0.3.4",
