run tests on CI

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "NODE_ENV=test NODE_ICU_DATA=node_modules/full-icu jest --config=jest.config.js",
     "test:watch": "NODE_ENV=test NODE_ICU_DATA=node_modules/full-icu jest --watch --config=jest.config.js",
     "generate:component": "hygen component new",
-    "clean": "rm -r storybook-dist && bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
+    "clean": "yarn clean:sb-dist && yarn clean:components",
+    "clean:sb-dist": "rm -r storybook-dist || true",
+    "clean:components": "bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
+    "bootstrap": "bolt",
     "prettier:base": "prettier --parser typescript",
     "prettier:check": "npm run prettier:base -- --list-different \"packages/**/*.{ts,tsx}\"",
     "prettier:write": "npm run prettier:base -- --write \"packages/**/*.{ts,tsx}\"",
