--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/pagination",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -35,7 +33,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/button": "^0.1.8",
+    "@im-ui/button": "^0.2.0",
     "@im-ui/label": "^0.1.6",
     "@im-ui/theme": "^0.3.6",
     "@im-ui/utils": "^0.5.1"
