--- a/packages/brandingLogo/package.json
+++ b/packages/brandingLogo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/branding-logo",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/cjs/main.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -20,9 +20,7 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -35,6 +33,6 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5"
+    "@im-ui/theme": "^1.0.0"
   }
 }
