--- a/packages/carousel/package.json
+++ b/packages/carousel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/carousel",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -20,9 +20,7 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -36,8 +34,8 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5",
-    "@im-ui/utils": "^0.5.0",
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/utils": "^0.5.2",
     "react-swipeable": "^5.4.0"
   }
 }
