--- a/packages/footer/package.json
+++ b/packages/footer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/footer",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -20,9 +20,7 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -39,10 +37,10 @@
     "react-intl": "^3.4.0"
   },
   "dependencies": {
-    "@im-ui/carousel": "^0.1.5",
-    "@im-ui/icon": "^0.2.8",
-    "@im-ui/theme": "^0.3.6",
-    "@im-ui/typography": "^0.2.6",
-    "@im-ui/utils": "^0.5.1"
+    "@im-ui/carousel": "^0.1.6",
+    "@im-ui/icon": "^0.2.9",
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/typography": "^0.2.7",
+    "@im-ui/utils": "^0.5.2"
   }
 }
