--- a/packages/header/package.json
+++ b/packages/header/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/header",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -20,9 +20,7 @@
     "Giovanni E"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -37,10 +35,10 @@
     "react-gtm-module": "^2.0.8"
   },
   "dependencies": {
-    "@im-ui/branding-logo": "^0.1.3",
-    "@im-ui/icon": "^0.2.8",
-    "@im-ui/theme": "^0.3.6",
-    "@im-ui/utils": "^0.5.1",
+    "@im-ui/branding-logo": "^0.1.5",
+    "@im-ui/icon": "^0.2.9",
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/utils": "^0.5.2",
     "@n8tb1t/use-scroll-position": "1.0.40"
   }
 }
