--- a/packages/input/package.json
+++ b/packages/input/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/input",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,11 +19,9 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
-    "@im-ui/checkbox": "^0.1.7",
+    "@im-ui/checkbox": "^0.1.8",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
@@ -36,9 +34,9 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/error-message": "^0.1.3",
-    "@im-ui/label": "^0.1.6",
-    "@im-ui/theme": "^0.3.6",
-    "@im-ui/utils": "^0.5.1"
+    "@im-ui/error-message": "^0.1.5",
+    "@im-ui/label": "^0.1.8",
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/utils": "^0.5.2"
   }
 }
