--- a/packages/loadingSpinner/package.json
+++ b/packages/loadingSpinner/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/loading-spinner",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -34,6 +32,6 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5"
+    "@im-ui/theme": "^1.0.0"
   }
 }
