--- a/packages/radioButtonGroup/package.json
+++ b/packages/radioButtonGroup/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/radio-button-group",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -34,8 +32,8 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/radio-button": "^0.1.4",
-    "@im-ui/theme": "^0.3.5",
-    "@im-ui/utils": "^0.5.0"
+    "@im-ui/radio-button": "^0.2.0",
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/utils": "^0.5.2"
   }
 }
