--- a/packages/styledDropdown/package.json
+++ b/packages/styledDropdown/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/styled-dropdown",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "types": "dist/cjs/index.d.ts",
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
@@ -13,17 +13,15 @@
   ],
   "repository": "git@github.com:Instamotion/im-components.git",
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "dependencies": {
-    "@im-ui/icon": "^0.2.8",
-    "@im-ui/label": "^0.1.6",
-    "@im-ui/theme": "^0.3.6",
+    "@im-ui/icon": "^0.2.9",
+    "@im-ui/label": "^0.1.8",
+    "@im-ui/theme": "^1.0.0",
     "downshift": "^3.3.5"
   },
   "devDependencies": {
-    "@im-ui/utils": "^0.5.1",
+    "@im-ui/utils": "^0.5.2",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
