--- a/packages/table/package.json
+++ b/packages/table/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/table",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/faker": "^4.1.7",
     "@types/jest": "^24.0.21",
@@ -37,7 +35,7 @@
     "styled-components": "^4.4.1"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.5",
-    "@im-ui/utils": "^0.5.0"
+    "@im-ui/theme": "^1.0.0",
+    "@im-ui/utils": "^0.5.2"
   }
 }
