--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@im-ui/utils",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/cjs/index.d.ts",
@@ -19,9 +19,7 @@
     "Dmytro B"
   ],
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
@@ -35,6 +33,6 @@
     "react-intl": "^3.4.0"
   },
   "dependencies": {
-    "@im-ui/theme": "^0.3.6"
+    "@im-ui/theme": "^1.0.0"
   }
 }
