--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:watch": "NODE_ENV=test NODE_ICU_DATA=node_modules/full-icu jest --watch --config=jest.config.js",
     "generate:component": "hygen component new",
     "clean": "yarn clean:sb-dist && yarn clean:components",
-    "clean:sb-dist": "rm -r storybook-dist || true",
-    "clean:components": "bolt ws exec -- rm -r dist && bolt ws exec -- rm -r node_modules",
+    "clean:sb-dist": "rm -rf storybook-dist || true",
+    "clean:components": "bolt ws exec -- rm -rf dist || true && bolt ws exec -- rm -rf node_modules || true",
     "bootstrap": "bolt",
     "typecheck": "bolt ws exec -- tsc --noEmit -p .",
     "prettier:base": "prettier --parser typescript",
@@ -32,6 +32,9 @@
   },
   "homepage": "https://github.com/Instamotion/im-components#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@n8tb1t/use-scroll-position": "1.0.40",
     "downshift": "^3.3.5",
     "react": "^16.11.0",
