--- a/packages/pagination/package.json
+++ b/packages/pagination/package.json
@@ -7,7 +7,7 @@
   "author": "InstaMotion Retail GmbH",
   "scripts": {
     "build": "npm run clean && npm run compile:esm && npm run compile:cjs",
-    "clean": "rm -rf ./dist",
+    "clean":"rm -rf ./dist || true",
     "compile:esm": "tsc -p build/tsconfig.esm.json",
     "compile:cjs": "tsc -p build/tsconfig.cjs.json",
     "prepublishOnly": "bolt build"
@@ -36,6 +36,7 @@
     "@im-ui/button": "^0.4.0",
     "@im-ui/label": "^0.1.8",
     "@im-ui/theme": "^1.0.0",
-    "@im-ui/utils": "^0.5.2"
+    "@im-ui/utils": "^0.5.2",
+    "@im-ui/icon": "^0.3.0"
   }
 }
