package.json cleanup

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:watch": "NODE_ENV=test NODE_ICU_DATA=node_modules/full-icu jest --watch --config=jest.config.js",
     "generate:component": "hygen component new",
     "clean": "yarn clean:sb-dist && yarn clean:components",
-    "clean:sb-dist": "rm -rf storybook-dist || true",
-    "clean:components": "bolt ws exec -- rm -rf dist || true && bolt ws exec -- rm -rf node_modules || true",
+    "clean:sb-dist": "rm -rf storybook-dist",
+    "clean:components": "bolt ws exec -- rm -rf dist && bolt ws exec -- rm -rf node_modules",
     "bootstrap": "bolt",
     "typecheck": "bolt ws exec -- tsc --noEmit -p .",
     "prettier:base": "prettier --parser typescript",
