RT-442: update toggle test;

--- a/packages/toggle/package.json
+++ b/packages/toggle/package.json
@@ -24,11 +24,11 @@
     "dist"
   ],
   "dependencies": {
+    "@im-ui/label": "^0.1.8",
     "@im-ui/theme": "^1.0.0",
-    "@im-ui/label": "^0.1.8"
+    "@im-ui/utils": "^0.5.2"
   },
   "devDependencies": {
-    "@im-ui/utils": "^0.5.2",
     "@types/jest": "^24.0.21",
     "@types/react": "^16.9.11",
     "@types/styled-components": "^4.1.20",
